--- a/web/package.json
+++ b/web/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "web",
+  "name": "",
+  "version": "0.0.1",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "prettier --check .",
+    "format": "prettier --write ."
   },
   "devDependencies": {
-    "@skeletonlabs/skeleton": "^2.9.2",
-    "@skeletonlabs/tw-plugin": "^0.4.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "postcss-load-config": "^5.0.2",
-    "svelte": "^4.2.12",
-    "tailwindcss": "^3.3.6",
-    "vite": "^5.2.0"
-  }
+    "@skeletonlabs/skeleton": "2.9.2",
+    "@skeletonlabs/tw-plugin": "0.4.0",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "autoprefixer": "10.4.19",
+    "postcss": "8.4.38",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "svelte": "^4.2.7",
+    "tailwindcss": "3.4.3",
+    "vite": "^5.0.3",
+    "vite-plugin-tailwind-purgecss": "0.3.1"
+  },
+  "type": "module"
 }
